--- a/style.css
+++ b/style.css
@@ -10,4 +10,24 @@
 
 .slidev-layout li {
   line-height: 1.5em;
+  margin-bottom: 0.5rem;
+  li {
+    list-style-type: disc;
+  }
+}
+
+.slidev-layout li::marker {
+  color: #2d79c7;
+}
+
+.slidev-layout h1 + p {
+  opacity: 0.7;
+}
+
+.slidev-layout.section h1 + p {
+  font-size: 1.75rem;
+}
+
+li.slidev-vclick-current {
+  font-weight: 800;
 }
