--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
   font-size: 1.75rem;
 }
 
+.slidev-layout.section h1 {
+  font-size: 2.75rem;
+}
+
 li.slidev-vclick-current {
   font-weight: 800;
 }
