Correct styles and speech

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   font-size: 20px;
   --slidev-code-font-size: 16px;
+  --slidev-code-line-height: 1.5em;
+  --slidev-code-margin: 0;
 }
 
 .slidev-layout h1 {
@@ -26,7 +28,11 @@
 }
 
 .slidev-layout h1 + p {
-  opacity: 0.7;
+  opacity: 0.6;
+}
+
+.slidev-layout h1 .number {
+  color: #2d79c7;
 }
 
 .slidev-layout.section h1 + p {
@@ -54,4 +60,9 @@ li.slidev-vclick-current {
 
 .reference p {
   margin: 0;
+}
+
+.error-output {
+  color: #a31515;
+  margin-top: 8px;
 }
