--- a/style.css
+++ b/style.css
@@ -28,7 +28,12 @@
 }
 
 .slidev-layout h1 + p {
-  opacity: 0.6;
+  opacity: 0.8;
+}
+
+.slidev-layout.cover h1 + p {
+  opacity: 0.9;
+  font-size: 1.5rem;
 }
 
 .slidev-layout h1 .number {
