Update dependencies, reorganize slides layout, correct styles, replace svg with code blocks.

--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ li.slidev-vclick-current {
 .two-cols-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 20px;
-  column-gap: 40px;
+  row-gap: 1rem;
+  column-gap: 2rem;
 }
 
 .reference {
